deployments/tekton/bootstrap/01-namespace.yaml
# Generated by RepoSentry
# File: 00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: reposentry-system
  labels:
    reposentry.io/component: "system"
    reposentry.io/type: "bootstrap-infrastructure"
  annotations:
    reposentry.io/generated-at: "2025-08-27T02:46:05Z"
---
