deployments/tekton/bootstrap/10-service.yaml
# Generated by RepoSentry
# File: 09-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reposentry-eventlistener-svc
  namespace: reposentry-system
  labels:
    reposentry.io/component: "bootstrap"
    reposentry.io/type: "service"
    eventlistener: reposentry-standard-eventlistener
spec:
  selector:
    eventlistener: reposentry-standard-eventlistener
  ports:
  - name: http-listener
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
---
